# glacier-bin1

./: Cargo.toml  CustomTypes.json  bin1.hexpat  build.rs  custom.txt  h3-types.txt  h3.txt  properties.txt  variant_impl.rs
.github/workflows/: artifact.yml
glacier-bin1/: Cargo.toml
glacier-bin1-codegen/: Cargo.toml
glacier-bin1-codegen/src/: known_variants.json  lib.rs
glacier-bin1-core/: Cargo.toml  build.rs  properties.txt
glacier-bin1-core/src/de/: impls.rs  mod.rs
glacier-bin1-core/src/ser/: impls.rs  mod.rs
glacier-bin1-core/src/types/: array.rs  pointers.rs  property.rs  repository.rs  resource.rs  string.rs  variant.rs
glacier-bin1-derive/: Cargo.toml
glacier-bin1-derive/src/: lib.rs
glacier-bin1-fl/: Cargo.toml  CustomTypes.json  ZHMTypes.json  build.rs
glacier-bin1-fl/src/: lib.rs
glacier-bin1-h1/: Cargo.toml  ZHMTypes.json  build.rs
glacier-bin1-h1/src/: lib.rs
glacier-bin1-h2/: Cargo.toml  ZHMTypes.json  build.rs
glacier-bin1-h3/: Cargo.toml  ZHMTypes.json  build.rs
glacier-bin1/src/: lib.rs  main.rs
glacier-bin1/src/game/: conversion.rs  mod.rs
glacier-bin1/tests/: fl.rs  game.rs
hitman-bin1/: Cargo.toml
hitman-bin1-codegen/: Cargo.toml
hitman-bin1-codegen/src/: lib.rs
hitman-bin1-core/: Cargo.toml  build.rs
hitman-bin1-core/src/de/: mod.rs
hitman-bin1-core/src/ser/: mod.rs
hitman-bin1-core/src/types/: array.rs  pointers.rs  resource.rs  string.rs  variant.rs
hitman-bin1-derive/: Cargo.toml
hitman-bin1-derive/src/: lib.rs
hitman-bin1-h1/: Cargo.toml  ZHMTypes.json  build.rs
hitman-bin1-h2/: Cargo.toml  ZHMTypes.json  build.rs
hitman-bin1-h2/src/: lib.rs
hitman-bin1-h3/: Cargo.toml  ZHMTypes.json  build.rs
hitman-bin1-h3/src/: lib.rs
hitman-bin1/src/: lib.rs  main.rs
hitman-bin1/src/game/: mod.rs
hitman-bin1/tests/: game.rs
src/de/: impls.rs  mod.rs
src/game/: h1.rs  h2.rs  h3.rs  variant_impl.rs
src/ser/: mod.rs
src/types/: pointers.rs  property.rs  repository.rs  resource.rs  variant.rs
