[workspace]
members = [
    "hitman-bin1",
    "hitman-bin1-core",
    "hitman-bin1-derive",
    "hitman-bin1-codegen",
    "hitman-bin1-h1",
    "hitman-bin1-h2",
    "hitman-bin1-h3",
]
resolver = "3"

[workspace.dependencies]
hitman-bin1-core = { path = "hitman-bin1-core" }
hitman-bin1-derive = { path = "hitman-bin1-derive" }
hitman-bin1-codegen = { path = "hitman-bin1-codegen" }
hitman-bin1-h1 = { path = "hitman-bin1-h1" }
hitman-bin1-h2 = { path = "hitman-bin1-h2" }
hitman-bin1-h3 = { path = "hitman-bin1-h3" }
