[package]
name = "hitman-bin1-core"
version = "0.1.0"
edition = "2024"

[dependencies]
hitman-bin1-derive.workspace = true

byteorder = "1.5.0"
ecow = { version = "0.3.0", features = ["serde"] }
rand = "0.10.1"
thiserror = "2.0.15"
tryvial = "0.2.0"
serde_json = { version = "1.0.150", features = ["preserve_order"] }
serde = { version = "1.0.219", features = ["derive"] }
dynex = "0.1.1"
dynex_core = "0.1.1"
static_init = "1.0.4"
bimap = "0.6.3"
crc32fast = "1.5.0"
papaya = "0.2.3"
serde_with = "3.20.0"
facet = "0.46.5"
rapidhash = { version = "4.4.1", features = ["unsafe", "rand"] }

tracing = { version = "0.1.41", optional = true }

[build-dependencies]
anyhow = "1.0.100"
crc32fast = "1.5.0"

[features]
# Crate features
tracing = ["dep:tracing"]
debug-log = ["hitman-bin1-derive/debug-log"]
